<resources>
    <string name="app_name">Co-Whisker</string>
    <string name="title_home">HOME</string>
    <string name="title_chat">CHAT</string>
    <string name="title_calendar">CALENDAR</string>
    <string name="title_pet">PET</string>
    <string name="title_settings">SETTINGS</string>
    <string name="greetings">HI</string>
    <string name="pet_name">Pet</string>
    <string name="title_hunger">Hunger</string>
    <string name="title_thirst">Thirst</string>
    <string name="title_fun">Fun</string>
    <string name="daily_tasks">TODAY\'S TASKS</string>
    <string name="task_name1">TASKNAME1</string>
    <string name="task_description1">This is a placeholder for the task description.</string>
    <string name="task_name2">TASKNAME2</string>
    <string name="task_description2">This is a placeholder for the task description.</string>
    <string name="task_name3">TASKNAME3</string>
    <string name="task_description3">This is a placeholder for the task description.</string>
    <string name="task_name4">TASKNAME4</string>
    <string name="task_description4">This is a placeholder for the task description.</string>
    <string name="task_name5">TASKNAME5</string>
    <string name="task_description5">This is a placeholder for the task description.</string>
    <string name="task_name6">TASKNAME6</string>
    <string name="task_description6">This is a placeholder for the task description.</string>
    <string name="task_name7">TASKNAME7</string>
    <string name="task_description7">This is a placeholder for the task description.</string>
    <string name="task_name8">TASKNAME8</string>
    <string name="task_description8">This is a placeholder for the task description.</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="tasks">TASKS</string>
    <string name="task_extended">MORE…</string>
    <string name="chat_description">Meet, Connect, Relate</string>
    <string name="chat_button">Find New People</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save">SAVE</string>
    <string name="logout">LOGOUT</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="confirm_logout">CONFIRM LOGOUT</string>
    <string name="cancel">CANCEL</string>
    <string name="upload">Upload Photo</string>
    <string name="change">CHANGE AVATAR</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="message">Ask anything…</string>
    <string name="default_web_client_id">489600567548-j8hc64q7gj0gajin0dn9o6p9hfbai9ti.apps.googleusercontent.com</string>
    <string name="login">LOGIN</string>
    <string name="googleSign">Sign In With Google</string>
    <string name="password">Password</string>
    <string name="register">REGISTER NOW</string>
    <string name="short_tasks">SHORT TASKS</string>
    <string name="confirm_task">CONFIRM TASK</string>
    <string name="are_you_sure_you_want_to_start_this_task">Are you sure you want to start this task?</string>
    <string name="start">Start</string>
    <string name="time_here">Time Here</string>
    <string name="cancelTimer">Cancel</string>
    <string name="task_update">UPDATE TASK</string>
    <string name="gen_response">Generating response…</string>
    <string name="task_quote">Complete your daily tasks!</string>
    <string name="username">Username</string>
    <string name="conf_new_password">Confirm New Password</string>
    <string name="ex_email">1234@example.com</string>
    <string name="edit_pet_name_info">edit pet name button</string>
    <string name="save_pet_name_info">save pet name button</string>
    <string name="mood">CURRENT MOOD</string>
    <string name="fantastic">Fantastic</string>
    <string name="neutral">Neutral</string>
    <string name="terrible">Terrible</string>
    <string name="channel_pet_status_name">Pet Status Alerts</string>
    <string name="channel_pet_status_description">Notifications when pet stats hit 0</string>
    <string name="channel_daily_reminder_name">Daily Reminders</string>
    <string name="channel_daily_reminder_description">Daily reminders for keeping your streak</string>
</resources>