<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.softwaredevelopment23_24.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.softwaredevelopment23_24.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.softwaredevelopment23_24.Settings"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.softwaredevelopment23_24.Login"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.softwaredevelopment23_24.Register"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/navigation_pet"
        android:name="com.example.softwaredevelopment23_24.Pet"
        android:label="@string/title_pet"
        tools:layout="@layout/fragment_pet"
        />
    <fragment
        android:id="@+id/navigation_beginning_chat"
        android:name="com.example.softwaredevelopment23_24.beginningChat"
        android:label="fragment_beginning_chat"
        tools:layout="@layout/fragment_beginning_chat" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.softwaredevelopment23_24.Chat"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" />
    <action
        android:id="@+id/action_homeFragment_to_calendarFragment"
        app:destination="@id/navigation_calendar"/>
    <action
        android:id="@+id/action_homeFragment_to_petFragment"
        app:destination="@id/navigation_pet"/>
</navigation>