<?xml version="1.0" encoding="utf-8"?>
<!--Clicking on Chat Button on Bottom Navigation Bar redirects to here-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/beginningchatFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".beginningChat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chatToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:paddingEnd="16dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="40dp"
            android:layout_height="37dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/homeToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/account_circle" />

        <TextView
            android:id="@+id/appnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textColor="@color/yellow"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/chatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_chat"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatToolbar" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatText">

        <ImageView
            android:id="@+id/circleOutline"
            android:layout_width="266dp"
            android:layout_height="266dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="29dp"
            android:src="@drawable/circle_outline" />

        <ImageView
            android:id="@+id/chatImage"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignStart="@+id/circleOutline"
            android:layout_alignTop="@+id/circleOutline"
            android:layout_alignEnd="@+id/circleOutline"
            android:layout_alignBottom="@+id/circleOutline"
            android:layout_marginStart="75dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="90dp"
            android:elevation="5dp"
            android:src="@drawable/calendar_background" />

        <ImageView
            android:id="@+id/person1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="29dp"
            android:elevation="5dp"
            android:src="@drawable/fun_image" />

        <ImageView
            android:id="@+id/chatavatarImage"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/person1"
            android:elevation="5dp"
            android:src="@drawable/account_circle" />

        <ImageView
            android:id="@+id/person2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/person1"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:src="@drawable/fun_image" />

        <ImageView
            android:id="@+id/person4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/chatavatarImage"
            android:layout_marginStart="85dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="29dp"
            android:layout_toEndOf="@+id/person2"
            android:elevation="5dp"
            android:src="@drawable/fun_image" />

    </RelativeLayout>

    <TextView
        android:id="@+id/chatDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/chat_description"
        android:textColor="@color/purple"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


<!--        Redirects to fragment_chat.xml-->
    <Button
        android:id="@+id/chatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/yellow"
        android:drawableRight="@drawable/forward_arrow"
        android:drawableTint="@color/purple"
        android:elevation="5dp"
        android:fontFamily="sans-serif-black"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/chat_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatDescription"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>